...
                android:textSize="18sp" android:textOff="@string/beginner" android:textOn="@string/beginner"
                android:layout_marginRight="16dp"
                android:contentDescription="@string/beginner" android:onClick="onBeginnerClicked"/>
        <ToggleButton
                android:text="@string/baller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/ballerClickBtn" android:layout_weight="1"
                android:background="@drawable/swoosh_toggle" android:textColor="@android:color/white"
                android:textSize="18sp" android:textOff="@string/baller" android:textOn="@string/baller"
                android:layout_marginLeft="16dp"
                android:contentDescription="@string/baller" android:onClick="onBallerClicked"/>
    </LinearLayout>
    <Button
            android:text="@string/finish"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/skillFinishBtn" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView" android:textColor="@android:color/white"
            android:fontFamily="@font/montserrat" android:textSize="14sp" android:background="@drawable/swoosh_button"
            android:contentDescription="@string/finish" android:onClick="onSkillFinishClicked"/>

...
