...
        <ToggleButton
                android:text="@string/mens"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteY="128dp"
                tools:layout_editor_absoluteX="161dp"
                android:id="@+id/mensLeagueBtn"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:textOff="@string/mens"
                android:textOn="@string/mens"
                android:background="@drawable/swoosh_toggle"
                android:textColor="@android:color/white" android:onClick="onMensClicked"/>
...
                android:textColor="@android:color/white" android:onClick="onCoedClicked"/>
    </LinearLayout>
    <Button
            android:text="@string/next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/leagueNextButton" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView5" android:background="@drawable/swoosh_button"
            android:fontFamily="@font/montserrat" android:textColor="@android:color/white"
            android:onClick="leagueNextClicked"/>

...
