...
            android:fontFamily="@font/montserrat"
            android:contentDescription="@string/find_team"/>
    <Button
            android:text="@string/get_started"
            android:layout_width="392dp"
            android:layout_height="51dp"
            android:id="@+id/getStartedButton" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0"
            android:textSize="16sp" android:fontFamily="@font/montserrat" android:layout_marginBottom="16dp"
            android:textColor="@android:color/white" android:background="@drawable/swoosh_button"
            android:contentDescription="@string/get_started"/>
...
